# ai-coding-agent

./: kimi_coding_agent_v5.py  kimi_coding_agent_v_6_1.py  kimi_coding_agent_v_6_1_clean.py  kimi_coding_agent_v_6_orig.py  requirements.json  requirements_coding_agent_v2.json  universal.patch
bioinformatics_etl/: FINAL_SUMMARY.md  Makefile  README.md  __main__.py  integration_test.py  requirements.txt  run_integration_test.py  run_tests.py  setup.py  test_cli.py  test_run.sh
bioinformatics_etl/artifacts/: research.json  validation.json
bioinformatics_etl/config/: example_config.yaml
bioinformatics_etl/sample_data/: sample_study_data.csv
bioinformatics_etl/study_etl/: __init__.py  cli.py  config.py  etl.py  utils.py  validator.py
bioinformatics_etl/study_etl_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
chopan_ai_test_v1/: .env.example  Dockerfile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
chopan_ai_test_v1/artifacts/: research.json  validation.json
chopan_ai_test_v1/config/: celery.toml  default_config.toml
chopan_ai_test_v1/services/api_gateway/: auth.py  main.py  models.py  rate_limiter.py  routes.py
chopan_ai_test_v1/services/content/: main.py  models.py  moderation.py  openai_client.py
chopan_ai_test_v1/services/email/: mailgun_client.py  main.py  models.py  sendgrid_client.py
chopan_ai_test_v1/services/prospect/: main.py  models.py
chopan_ai_test_v1/services/shared/: __init__.py  config.py  database.py  models.py
chopan_ai_test_v1/services/social/: main.py  models.py
chopan_ai_test_v1/services/worker/: celery_app.py  tasks.py
chopan_ai_test_v1/tests/: __init__.py  test_api_gateway.py  test_basic.py  test_content_service.py  test_email_service.py
packs/: __init__.py  data_pipeline.py  refactor.py  spa_react.py
test_codex_updates_v1/: package.json  requirements.txt  tailwind.config.js  test_app.py  test_validation.py
tests/: test_filesystem_tools.py
(+20 files in other folders)
