[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chopan-ai-outreach-assistant"
version = "1.0.0"
description = "Microservices outreach and storytelling assistant"
authors = [{name = "Chopan AI", email = "dev@chopan.ai"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.0",
    "redis>=5.0.0",
    "celery>=5.5.0",
    "openai>=2.3.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.0",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "spacy>=3.8.0",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=5.1.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "tenacity>=8.2.0",
    "sentry-sdk>=2.0.0",
    "toml>=0.10.0",
    "checksumdir>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "alembic>=1.13.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true